--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "browser-sync": "^2.26.5",
     "gulp": "^4.0.1",
+    "gulp-browserify": "^0.5.1",
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-javascript-obfuscator": "^1.1.6",
