--- a/package.json
+++ b/package.json
@@ -14,11 +14,18 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "bluebird": "^3.5.5",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.5.12",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
