--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "atob": "^2.1.2",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.5",
+    "btoa": "^1.2.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
@@ -26,6 +28,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pem": "^1.14.2",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
