--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "atob": "^2.1.2",
-    "axios": "^0.24.0",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.5",
     "btoa": "^1.2.1",
@@ -30,7 +30,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pem": "^1.14.2",
-    "pug": "2.0.0-beta11"
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "browser-sync": "^2.26.5",
@@ -43,10 +43,11 @@
     "gulp-nodemon": "^2.4.2",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^5.1.0",
     "gulp-tap": "^1.0.1",
     "gulp-uglify-es": "^1.0.4",
     "nodemon": "^1.18.11",
+    "sass": "^1.51.0",
     "yargs": "^13.2.2"
   }
 }
